k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: sil-backend-assessment
  labels:
    name: sil-backend-assessment
    app: sil-backend-assessment
